# companyData

./: .dockerignore  .env.aws.example  .env.moonstocks.example  .env.native.example  .gitignore  Dockerfile  INTEGRATION_TASK.md  README.md  docker-compose.moonstocks.yml  pyproject.toml  run_server.py
agent/: README.md
docs/: AGENT_SETUP.md  eodhd_phase0_matrix.md  free_open_gap_report.md  free_source_inventory.md  moonstocks-integration.md  price_data_gap_report.md  source_resolution_model.md  us_free_phase0_plan.md
moonstocks-ai-analyzer/: .dockerignore  .env.example  Dockerfile  README.md  analyzer.py  analyzer_claude.py  analyzer_openai.py  analyzer_provider.py  docker-compose.yml  eodhd_fetch.py  main.py  requirements.txt  run_log.py
moonstocks-api/: .dockerignore  Dockerfile  MoonStocksAPI.sln
notebooks/: phase0_us_validation.ipynb
outputs/: analysis_progress.json  company_universe.json  tracker.json
scripts/: DOCKER.md  _3yest_check.py  _aapl_sanity.py  _audit_nsrgf_ttm.py  _check_peg.py  _check_positions.py  _check_screener.py  _eps_check.py  _eps_check2.py  _meta_pe_check.py  _meta_pe_debug.py  _msft_why.py  _nflx_check.py  _peek_tt_quarters.py  _rankings.py  _sanity_test.py  _top10_scan.py  _top_listing.py  _tsm_check.py  backfill_analyst_fundamentals.py  build_public_us_sample.py  build_sample_snapshot.py  build_us_sample_snapshot.py  check_screener_ranks.py  debug_api_response.py  deep_debug_api.py  deep_smoke_pages.py  demo_comprehensive_analysis.py  demo_phase1_analysis.py  deploy_moonstocks_ecr.ps1  discover_companies.py  discover_nordic.py  (+56 more)
(+174 files in other folders)
