[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "equity-sorter"
version = "0.1.0"
description = "Phase 0 foundation for a deterministic equity sorting engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "requests>=2.32.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
